@@ -1,3 +1,7 @@
+2020-07-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* mpfr.c (mpg_interpret): Make the instruction tracing more sane.
+
 2020-07-10         Arnold D. Robbins     <arnold@skeeve.com>
 	
 	Fix printf issues. Thanks to Michal Jaegermann for the report.
